# dotfiles

./: .aliases  .gitignore  .gitignore_global  .uvrc  .zshrc.kjgong  install.sh  kjgong.zsh-theme  sync.sh  zsh.example.sh
pyenv/: pyproject.toml
