[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "click>=8.2.1",
    "cmaqsatproc>=0.4.1",
    "garminconnect>=0.2.26",
    "ipython>=9.2.0",
    "jupyterlab>=4.4.2",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "ruff>=0.11.10",
    "shortuuid>=1.0.13",
    "trash-cli>=0.24.5.26",
    "xgboost>=3.0.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
